--- a/options.css
+++ b/options.css
@@ -1,31 +1,105 @@
 body {
-    padding: 1rem !important
+  padding: 1rem !important;
 }
 
 * {
-    transition: all linear .1s;
+  -webkit-transition: all linear .1s;
+  transition: all linear .1s;
+  font-family: Consolas, monaco, monospace;
+}
+
+button {
+  display: block;
+  width: 100%;
+  color: white;
+  font-weight: bold;
+  border-width: 0px !important;
+  border-style: none !important;
+  padding: .5rem;
+  cursor: pointer;
+  font-size: 1.25rem;
+}
+
+button#add {
+  background-color: #3070e6;
+  margin-bottom: .5rem;
+}
+
+button#add:hover {
+  background-color: #3443cc;
 }
 
 button#save {
-    display: block;
-    width: 100%;
-    border-radius: 1rem;
-    background-color: green;
-    color: white;
-    font-weight: bold;
-    border-width: 0px !important;
-    border-style: none !important;
-    padding: .5rem;
-    cursor: pointer;
+  background-color: #10a510;
 }
 
 button#save:hover {
-    background-color: greenyellow;
+  background-color: #039403;
 }
 
 .item {
-    padding-top: .5rem;
-    padding-bottom: .5rem;
-    border: 1px solid black;
-    margin-bottom: 1rem;
+  position: relative;
+  padding-top: .5rem;
+  padding-bottom: .5rem;
+  border: 1px solid black;
+  margin-bottom: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: .5rem;
 }
+
+.item button.remove-me {
+  border-radius: 50%;
+  width: 32px;
+  height: 32px;
+  padding: .15rem;
+  font-size: .75rem;
+  background-color: red;
+  color: white;
+  position: absolute;
+  top: 0;
+  right: 0;
+  -webkit-transform: translate(50%, -50%);
+          transform: translate(50%, -50%);
+}
+
+input:not([type="checkbox"]), button {
+  border-radius: 2rem;
+}
+
+input:not([type="checkbox"]), textarea {
+  display: block;
+  width: 100%;
+  padding: 0.75rem;
+  background-color: #fff;
+  border-radius: 2rem;
+  margin: 0 !important;
+  border: 1px solid transparent;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  outline: none !important;
+  -webkit-transition: border-color .25s ease !important;
+  transition: border-color .25s ease !important;
+}
+
+input:not([type="checkbox"]):focus, textarea:focus {
+  border-color: black;
+}
+
+textarea {
+  border-radius: 1rem !important;
+}
+
+div.input-group:not(:last-of-type) {
+  margin-bottom: .5rem;
+}
+
+div.input-group label {
+  font-weight: bold;
+}
+/*# sourceMappingURL=options.css.map */
